Define PiTR interval for GC and make it possible to specify per-tenant configuration parameters
refer #1320
