# pageserver/src/config.rs
@@ -35,6 +35,7 @@ pub mod defaults {
 
     pub const DEFAULT_GC_HORIZON: u64 = 64 * 1024 * 1024;
     pub const DEFAULT_GC_PERIOD: &str = "100 s";
+    pub const DEFAULT_PITR_INTERVAL: &str = "30 days";
 
     pub const DEFAULT_WAIT_LSN_TIMEOUT: &str = "60 s";
     pub const DEFAULT_WAL_REDO_TIMEOUT: &str = "60 s";
@@ -61,6 +62,7 @@ pub mod defaults {
 
 #gc_period = '{DEFAULT_GC_PERIOD}'
 #gc_horizon = {DEFAULT_GC_HORIZON}
+#pitr_interval = '{DEFAULT_PITR_INTERVAL}'
 
 #wait_lsn_timeout = '{DEFAULT_WAIT_LSN_TIMEOUT}'
 #wal_redo_timeout = '{DEFAULT_WAL_REDO_TIMEOUT}'
@@ -91,6 +93,7 @@ pub struct PageServerConf {
 
     pub gc_horizon: u64,
     pub gc_period: Duration,
+    pub pitr_interval: Duration,
 
     // Timeout when waiting for WAL receiver to catch up to an LSN given in a GetPage@LSN call.
     pub wait_lsn_timeout: Duration,
@@ -116,6 +119,27 @@ pub struct PageServerConf {
 
     pub auth_validation_public_key_path: Option<PathBuf>,
     pub remote_storage_config: Option<RemoteStorageConfig>,
+}
+
+#[derive(Debug, Clone, Copy, PartialEq, Eq)]
+pub struct TenantConf {
+    pub checkpoint_distance: u64,
+    pub checkpoint_period: Duration,
+    pub gc_horizon: u64,
+    pub gc_period: Duration,
+    pub pitr_interval: Duration,
+}
+
+impl TenantConf {
+    pub fn from(conf: &PageServerConf) -> TenantConf {
+        TenantConf {
+            gc_period: conf.gc_period,
+            gc_horizon: conf.gc_horizon,
+            pitr_interval: conf.pitr_interval,
+            checkpoint_distance: conf.checkpoint_distance,
+            checkpoint_period: conf.checkpoint_period,
+        }
+    }
 }
 
 /// External backup storage configuration, enough for creating a client for that storage.
@@ -244,6 +268,7 @@ impl PageServerConf {
             checkpoint_period: humantime::parse_duration(DEFAULT_CHECKPOINT_PERIOD)?,
             gc_horizon: DEFAULT_GC_HORIZON,
             gc_period: humantime::parse_duration(DEFAULT_GC_PERIOD)?,
+            pitr_interval: humantime::parse_duration(DEFAULT_PITR_INTERVAL)?,
             wait_lsn_timeout: humantime::parse_duration(DEFAULT_WAIT_LSN_TIMEOUT)?,
             wal_redo_timeout: humantime::parse_duration(DEFAULT_WAL_REDO_TIMEOUT)?,
             page_cache_size: DEFAULT_PAGE_CACHE_SIZE,
@@ -266,6 +291,7 @@ impl PageServerConf {
                 "checkpoint_period" => conf.checkpoint_period = parse_toml_duration(key, item)?,
                 "gc_horizon" => conf.gc_horizon = parse_toml_u64(key, item)?,
                 "gc_period" => conf.gc_period = parse_toml_duration(key, item)?,
+                "pitr_interval" => conf.pitr_interval = parse_toml_duration(key, item)?,
                 "wait_lsn_timeout" => conf.wait_lsn_timeout = parse_toml_duration(key, item)?,
                 "wal_redo_timeout" => conf.wal_redo_timeout = parse_toml_duration(key, item)?,
                 "initial_superuser_name" => conf.superuser = parse_toml_string(key, item)?,
@@ -402,6 +428,7 @@ impl PageServerConf {
             checkpoint_period: Duration::from_secs(10),
             gc_horizon: defaults::DEFAULT_GC_HORIZON,
             gc_period: Duration::from_secs(10),
+            pitr_interval: Duration::from_secs(60 * 60),
             wait_lsn_timeout: Duration::from_secs(60),
             wal_redo_timeout: Duration::from_secs(60),
             page_cache_size: defaults::DEFAULT_PAGE_CACHE_SIZE,
@@ -474,6 +501,8 @@ checkpoint_period = '111 s'
 gc_period = '222 s'
 gc_horizon = 222
 
+pitr_interval = '30 days'
+
 wait_lsn_timeout = '111 s'
 wal_redo_timeout = '111 s'
 
@@ -507,6 +536,7 @@ initial_superuser_name = 'zzzz'
                 checkpoint_period: humantime::parse_duration(defaults::DEFAULT_CHECKPOINT_PERIOD)?,
                 gc_horizon: defaults::DEFAULT_GC_HORIZON,
                 gc_period: humantime::parse_duration(defaults::DEFAULT_GC_PERIOD)?,
+                pitr_interval: humantime::parse_duration(defaults::DEFAULT_PITR_INTERVAL)?,
                 wait_lsn_timeout: humantime::parse_duration(defaults::DEFAULT_WAIT_LSN_TIMEOUT)?,
                 wal_redo_timeout: humantime::parse_duration(defaults::DEFAULT_WAL_REDO_TIMEOUT)?,
                 superuser: defaults::DEFAULT_SUPERUSER.to_string(),
@@ -552,6 +582,7 @@ initial_superuser_name = 'zzzz'
                 gc_period: Duration::from_secs(222),
                 wait_lsn_timeout: Duration::from_secs(111),
                 wal_redo_timeout: Duration::from_secs(111),
+                pitr_interval: Duration::from_secs(30 * 24 * 60 * 60),
                 superuser: "zzzz".to_string(),
                 page_cache_size: 444,
                 max_file_descriptors: 333,
