# pageserver/src/http/models.rs
@@ -14,4 +14,22 @@ pub struct BranchCreateRequest {
 pub struct TenantCreateRequest {
     #[serde(with = "hex")]
     pub tenant_id: ZTenantId,
+    pub checkpoint_distance: Option<u64>,
+    pub checkpoint_period: Option<String>,
+    pub gc_horizon: Option<u64>,
+    pub gc_period: Option<String>,
+    pub pitr_interval: Option<String>,
+}
+
+impl TenantCreateRequest {
+    pub fn new(tenant_id: ZTenantId) -> TenantCreateRequest {
+        TenantCreateRequest {
+            tenant_id,
+            checkpoint_distance: None,
+            checkpoint_period: None,
+            gc_horizon: None,
+            gc_period: None,
+            pitr_interval: None,
+        }
+    }
 }
