# pageserver/src/http/openapi_spec.yml
@@ -302,6 +302,16 @@ paths:
                 tenant_id:
                   type: string
                   format: hex
+                gc_period:
+                  type: string
+                gc_horizon:
+                  type: integer
+                pitr_interval:
+                  type: string
+                checkpoint_distance:
+                  type: integer
+                checkpoint_period:
+                  type: string
       responses:
         "201":
           description: CREATED
